--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
-<!-- wp:html -->
+<html>
+    <header>
+        <style>
+            body{
+                width:60%;
+                margin:auto;
+            }
+        </style>
+    </header>
+    <body>
+
 Hi friends/family/acquaintances, especially those not on social media!
+    
 <br><br>
 I've linked a very small subset of info from the larger whole.
 I did not need to "dig" for this information. I am being bombarded by thousands of posts of this nature. For more information, click on the individual usernames and look at what's being shared on their pages.
@@ -62,4 +73,6 @@ On Saturday, NYPD plowed their vehicles through a group of protestors.
 <br>
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Police are invading private homes to pull protesters out of them in Washington DC RN. This is a Fascist dictatorship in action. It's coming - DC is a test run for these actions - POTUS is pushing to see what we all will tolerate. It's been 3+ years and no one has stopped him once <a href="https://t.co/VFLI0UHbiF">https://t.co/VFLI0UHbiF</a></p>— Leslie Mac (@LeslieMac) <a href="https://twitter.com/LeslieMac/status/1267655018141888513?ref_src=twsrc%5Etfw">June 2, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<!-- /wp:html -->
+
+    </body>
+</html>
