--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <html>
-    <header>
+    <head>
+        <meta property="og:site_name" content="@hydezeke/protests"/>
+        <meta property="og:title" content="Digest of Firsthand Accounts"/>
+        <meta property="og:image" content="preview.png">
         <style>
             body{
                 width:60%;
                 margin:auto;
             }
         </style>
-    </header>
+    </head>
     <body>
 
 <br><br><br>
