--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@ Content warning: violence
 
 <br>
 
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/BREAKING?src=hash&amp;ref_src=twsrc%5Etfw">#BREAKING</a>: 2 Atlanta Police officers fired after video showed them using &quot;excessive force&quot; in the arrest of two college students Saturday night, the Mayor says. <br><br>The arrest was reportedly due to disregarding curfew &amp; orders from police.<br><br> <a href="https://t.co/vginBn34II">pic.twitter.com/vginBn34II</a></p>&mdash; Breaking911 (@Breaking911) <a href="https://twitter.com/Breaking911/status/1267229440477716482?ref_src=twsrc%5Etfw">May 31, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<br>
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">1️⃣8️⃣1️⃣ Los Angeles, CA: at least 6 cops destroy a car, breaking out its windows to drag out the occupants <br><br> <a href="https://t.co/qWnqxJyXoD">pic.twitter.com/qWnqxJyXoD</a></p>&mdash; T. Greg Doucette (@greg_doucette) <a href="https://twitter.com/greg_doucette/status/1268049145912348673?ref_src=twsrc%5Etfw">June 3, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<br>
+
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Share widely: National guard and MPD sweeping our residential street. Shooting paint canisters at us on our own front porch. Yelling “light em up” <a href="https://twitter.com/hashtag/JusticeForGeorgeFloyd?src=hash&amp;ref_src=twsrc%5Etfw">#JusticeForGeorgeFloyd</a> <a href="https://twitter.com/hashtag/JusticeForGeorge?src=hash&amp;ref_src=twsrc%5Etfw">#JusticeForGeorge</a> <a href="https://twitter.com/hashtag/BlackLivesMatter?src=hash&amp;ref_src=twsrc%5Etfw">#BlackLivesMatter</a> <a href="https://t.co/bW48imyt55">pic.twitter.com/bW48imyt55</a></p>— Tanya Kerssen (@tkerssen) <a href="https://twitter.com/tkerssen/status/1266921821653385225?ref_src=twsrc%5Etfw">May 31, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">“cops wouldnt shoot you if you were being peaceful” <a href="https://t.co/VBrGddaAd8">pic.twitter.com/VBrGddaAd8</a></p>— inochi (@liveinochi) <a href="https://twitter.com/liveinochi/status/1267504585926557696?ref_src=twsrc%5Etfw">June 1, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -37,26 +45,42 @@ Content warning: violence
 
 <br>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">at a small peaceful demonstration in stafford, va yesterday, police pushed a group of black teenagers into the road then pepper sprayed them for being in the road.<br><br>this is a common tactic. they make it impossible to comply because all they really want is a reason to hurt you. <a href="https://t.co/JJJtnUb3Bl">pic.twitter.com/JJJtnUb3Bl</a></p>— molly conger (@socialistdogmom) <a href="https://twitter.com/socialistdogmom/status/1267557585256943616?ref_src=twsrc%5Etfw">June 1, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<br>
+<br>
+<b>Richmond resident is detained while driving protestors back to their car. <br>Full thread here: <a href="https://twitter.com/nomoniker_/status/1267608918135640064">https://twitter.com/nomoniker_/status/1267608918135640064</a></b>
+<br>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">All of us were basically on our way home. They took us to a large garage with at least 100 other people they arrested that night. I say arrested, but I’m not actually sure. Talking to others, no one was given a reason why they were stopped, no one was read Miranda rights etc 6/</p>&mdash; no moniker (@nomoniker_) <a href="https://twitter.com/nomoniker_/status/1267611747667640321?ref_src=twsrc%5Etfw">June 2, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+<br>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">1️⃣8️⃣0️⃣ Wilmington, NC: police kneel &quot;in solidarity&quot;...<br><br>...so protestors will get closer...<br><br>...for the police to shoot them.<br><br> <a href="https://t.co/Jxm2NXtw8A">pic.twitter.com/Jxm2NXtw8A</a></p>&mdash; T. Greg Doucette (@greg_doucette) <a href="https://twitter.com/greg_doucette/status/1268047092079112198?ref_src=twsrc%5Etfw">June 3, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Lost my glasses and my ankle is in searing pain after NYPD hit me in the face multiple times with riot shields and pushed me to the ground. I was backing away as request, with my hands up. My NYPD-issued press badge was clearly visible. I’m just sitting here crying. This sucks.</p>— Tyler Blint- Welsh (@tylergabriel_) <a href="https://twitter.com/tylergabriel_/status/1267287516345925632?ref_src=twsrc%5Etfw">June 1, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
 <br>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">This is the video from last night in Atlanta when the young black couple was forced out of their car. Their tires were flattened and they were tazed. <br><br>But notice the smiling white girl waving at the camera who had to have gone passed the same cops at some point. <a href="https://twitter.com/hashtag/DefundThePolice?src=hash&amp;ref_src=twsrc%5Etfw">#DefundThePolice</a> <a href="https://t.co/cy1kOj0JGC">pic.twitter.com/cy1kOj0JGC</a></p>&mdash; Benjamin Dixon 🏴🚩🇺🇸 (@BenjaminPDixon) <a href="https://twitter.com/BenjaminPDixon/status/1267307334822494208?ref_src=twsrc%5Etfw">June 1, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<br>
+<br>
+Protest locations<br>
+<img src="map.png" style="width:40%">&nbsp;<img src="map2.png" style="width:40%">
+<br><a href="https://en.wikipedia.org/wiki/George_Floyd_protests#/map/0">Map source</a>
+<br><br>
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Here's what I saw today in Seattle: police began firing flashbangs at crowd of protesters, antagonizing a peaceful rally right as it was getting started. This was before any looting. Media and Durkan make it sound like protester violence began first. It didn't.</p>— Robert Cruickshank (@cruickshank) <a href="https://twitter.com/cruickshank/status/1266924989283852288?ref_src=twsrc%5Etfw">May 31, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 <br>
-On Saturday, NYPD plowed their vehicles through a group of protestors.
+<br><b>
+    On Saturday, NYPD plowed their vehicles through a group of protestors.
+</b>
+
 <br>
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Here is the overhead... <a href="https://t.co/US6Qqhkz3O">pic.twitter.com/US6Qqhkz3O</a></p>— Rob Bennett 🤠 (@rob_bennett) <a href="https://twitter.com/rob_bennett/status/1266895719455248385?ref_src=twsrc%5Etfw">May 31, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-<br>Bill de Blasio jumps to defend the actions of NYPD.<br>
+<br><b>Bill de Blasio jumps to defend the actions of NYPD.</b><br>
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">mayor of NYC defending police that drove into crowd of ppl <a href="https://t.co/7Kf1B7cQKa">https://t.co/7Kf1B7cQKa</a> <a href="https://t.co/nrsOakaDc1">https://t.co/nrsOakaDc1</a></p>— Molly (@mollypshe) <a href="https://twitter.com/mollypshe/status/1267028283469725696?ref_src=twsrc%5Etfw">May 31, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-<br>A New York police union doxes De Blasio's daughter.<br>
+<br><b>A New York police union doxes De Blasio's daughter.</b><br>
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">A major NYPD police union, the Sergeant Benevolent Association, just...doxxed De Blasio's daughter, tweeting out PII (redacted) including her government IDI #'s (h/t <a href="https://twitter.com/dellcam?ref_src=twsrc%5Etfw">@dellcam</a>) <a href="https://t.co/koXniZh80O">pic.twitter.com/koXniZh80O</a></p>— Avi Asher-Schapiro (@AASchapiro) <a href="https://twitter.com/AASchapiro/status/1267297798241878016?ref_src=twsrc%5Etfw">June 1, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
@@ -79,6 +103,10 @@ On Saturday, NYPD plowed their vehicles through a group of protestors.
 <br>
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Police are invading private homes to pull protesters out of them in Washington DC RN. This is a Fascist dictatorship in action. It's coming - DC is a test run for these actions - POTUS is pushing to see what we all will tolerate. It's been 3+ years and no one has stopped him once <a href="https://t.co/VFLI0UHbiF">https://t.co/VFLI0UHbiF</a></p>— Leslie Mac (@LeslieMac) <a href="https://twitter.com/LeslieMac/status/1267655018141888513?ref_src=twsrc%5Etfw">June 2, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<br>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">RALEIGH POLICE JUST FIRED FLASH BANGS AND LESS LETHAL ROUNDS AT MEDICS, INCLUDING THE OWNER OF RUBY’S DELUXE, A QUEER BAR WHERE THE MEDICS WERE STATIONED. <a href="https://t.co/sGckVjRC1e">pic.twitter.com/sGckVjRC1e</a></p>&mdash; film pigs not ppl‎ ☭ (@bennykoval) <a href="https://twitter.com/bennykoval/status/1267325857892368384?ref_src=twsrc%5Etfw">June 1, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<br>
 
 
 
