--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+xmlns:fb="http://ogp.me/ns/fb#">
     <head>
         <meta property="og:site_name" content="@hydezeke/protests"/>
         <meta property="og:title" content="Digest of Firsthand Accounts"/>
