--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ xmlns:fb="http://ogp.me/ns/fb#">
     <head>
         <meta property="og:site_name" content="@hydezeke/protests"/>
         <meta property="og:title" content="Digest of Firsthand Accounts"/>
-        <meta property="og:image" content="preview2.png">
+        <meta property="og:image" content="preview.png">
         <style>
             body{
                 width:60%;
