--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@ Protest locations<br>
 <br>
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Police are invading private homes to pull protesters out of them in Washington DC RN. This is a Fascist dictatorship in action. It's coming - DC is a test run for these actions - POTUS is pushing to see what we all will tolerate. It's been 3+ years and no one has stopped him once <a href="https://t.co/VFLI0UHbiF">https://t.co/VFLI0UHbiF</a></p>— Leslie Mac (@LeslieMac) <a href="https://twitter.com/LeslieMac/status/1267655018141888513?ref_src=twsrc%5Etfw">June 2, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+<br>
+Virginia cop spits on detained protestor
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">these cops are SPITTING on people now. they are animals <a href="https://t.co/zyCOaTL5Dl">pic.twitter.com/zyCOaTL5Dl</a></p>&mdash; toby’ | BLM (@gwstoby) <a href="https://twitter.com/gwstoby/status/1268000330941378560?ref_src=twsrc%5Etfw">June 3, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">RALEIGH POLICE JUST FIRED FLASH BANGS AND LESS LETHAL ROUNDS AT MEDICS, INCLUDING THE OWNER OF RUBY’S DELUXE, A QUEER BAR WHERE THE MEDICS WERE STATIONED. <a href="https://t.co/sGckVjRC1e">pic.twitter.com/sGckVjRC1e</a></p>&mdash; film pigs not ppl‎ ☭ (@bennykoval) <a href="https://twitter.com/bennykoval/status/1267325857892368384?ref_src=twsrc%5Etfw">June 1, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
