--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@ Protest locations<br>
 <img src="map.png" style="width:40%">&nbsp;<img src="map2.png" style="width:40%">
 <br><a href="https://en.wikipedia.org/wiki/George_Floyd_protests#/map/0">Map source</a>
 <br><br>
+<br>
+Cincinatti police confiscate bag w/ insulin. Diabetic protestor begs them to keep the bag in sight
+<br>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">you can&#39;t deny someone their insulin if they&#39;re diabetic what the fuck is this <a href="https://t.co/On3c3ThxZi">pic.twitter.com/On3c3ThxZi</a></p>&mdash; 𝗅𝗂𝗓 ♥︎ 𝙢𝙚𝙡𝙞𝙨𝙨𝙖 / 𝙙𝙖𝙬𝙣 ☦︎︎ 𝖇𝖑𝖒 (@sunflowrlarries) <a href="https://twitter.com/sunflowrlarries/status/1268188032945008642?ref_src=twsrc%5Etfw">June 3, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<br>
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Here's what I saw today in Seattle: police began firing flashbangs at crowd of protesters, antagonizing a peaceful rally right as it was getting started. This was before any looting. Media and Durkan make it sound like protester violence began first. It didn't.</p>— Robert Cruickshank (@cruickshank) <a href="https://twitter.com/cruickshank/status/1266924989283852288?ref_src=twsrc%5Etfw">May 31, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
@@ -110,7 +115,6 @@ Virginia cop spits on detained protestor
 <br>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">RALEIGH POLICE JUST FIRED FLASH BANGS AND LESS LETHAL ROUNDS AT MEDICS, INCLUDING THE OWNER OF RUBY’S DELUXE, A QUEER BAR WHERE THE MEDICS WERE STATIONED. <a href="https://t.co/sGckVjRC1e">pic.twitter.com/sGckVjRC1e</a></p>&mdash; film pigs not ppl‎ ☭ (@bennykoval) <a href="https://twitter.com/bennykoval/status/1267325857892368384?ref_src=twsrc%5Etfw">June 1, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
-
 
 
     </body>
