--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Protest locations<br>
 <br><a href="https://en.wikipedia.org/wiki/George_Floyd_protests#/map/0">Map source</a>
 <br><br>
 <br>
-Cincinatti police confiscate bag w/ insulin. Diabetic protestor begs them to keep the bag in sight
+Context: Cincinatti police confiscate bag w/ insulin. Diabetic protestor begs them to keep the bag in sight
 <br>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">you can&#39;t deny someone their insulin if they&#39;re diabetic what the fuck is this <a href="https://t.co/On3c3ThxZi">pic.twitter.com/On3c3ThxZi</a></p>&mdash; 𝗅𝗂𝗓 ♥︎ 𝙢𝙚𝙡𝙞𝙨𝙨𝙖 / 𝙙𝙖𝙬𝙣 ☦︎︎ 𝖇𝖑𝖒 (@sunflowrlarries) <a href="https://twitter.com/sunflowrlarries/status/1268188032945008642?ref_src=twsrc%5Etfw">June 3, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
