--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ xmlns:fb="http://ogp.me/ns/fb#">
     <body>
 
 <br><br><br>
+<span style="font-size: large;"><b><u>Police presence at the George Floyd protests</b></u></span>
+<br><br>
 Hi friends/family/acquaintances/strangers, especially those not on social media!
     
 <br><br>
