--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@ Content warning: violence
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Share widely: National guard and MPD sweeping our residential street. Shooting paint canisters at us on our own front porch. Yelling “light em up” <a href="https://twitter.com/hashtag/JusticeForGeorgeFloyd?src=hash&amp;ref_src=twsrc%5Etfw">#JusticeForGeorgeFloyd</a> <a href="https://twitter.com/hashtag/JusticeForGeorge?src=hash&amp;ref_src=twsrc%5Etfw">#JusticeForGeorge</a> <a href="https://twitter.com/hashtag/BlackLivesMatter?src=hash&amp;ref_src=twsrc%5Etfw">#BlackLivesMatter</a> <a href="https://t.co/bW48imyt55">pic.twitter.com/bW48imyt55</a></p>— Tanya Kerssen (@tkerssen) <a href="https://twitter.com/tkerssen/status/1266921821653385225?ref_src=twsrc%5Etfw">May 31, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
+<br>
+
+<b>San Diego: Plain-clothes officers pull civilian into an unmarked car. "Follow us and you'll get shot"</b>
+<br>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">welcome to peaceful protesting. <a href="https://t.co/cJREfNujaN">pic.twitter.com/cJREfNujaN</a></p>&mdash; jaycers (@jaycieelynnn) <a href="https://twitter.com/jaycieelynnn/status/1268778074251780096?ref_src=twsrc%5Etfw">June 5, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<br>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">“cops wouldnt shoot you if you were being peaceful” <a href="https://t.co/VBrGddaAd8">pic.twitter.com/VBrGddaAd8</a></p>— inochi (@liveinochi) <a href="https://twitter.com/liveinochi/status/1267504585926557696?ref_src=twsrc%5Etfw">June 1, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">This boy had his hands up when an NYPD ofcr pulled his mask down and pepper sprayed him. ⁦<a href="https://twitter.com/NYPDShea?ref_src=twsrc%5Etfw">@NYPDShea</a>⁩? Mayor ⁦<a href="https://twitter.com/BilldeBlasio?ref_src=twsrc%5Etfw">@BilldeBlasio</a>⁩? <a href="https://t.co/YtXDOoVckA">pic.twitter.com/YtXDOoVckA</a></p>— Sherrilyn Ifill (@Sifill_LDF) <a href="https://twitter.com/Sifill_LDF/status/1266928343141752833?ref_src=twsrc%5Etfw">May 31, 2020</a></blockquote> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
